Fixed close icon too high in tabsheet when using IE9 and TABSHEET_MINIMAL style #10884

--- a/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet-minimal-style.scss
+++ b/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet-minimal-style.scss
@@ -105,9 +105,15 @@
 	-moz-border-radius: 7px;
 }
 
-.v-ie9 & .#{$primaryStyleName}-tabs-minimal .#{$primaryStyleName}-caption-close:only-child,
-.v-ie9 & .#{$primaryStyleName}-tabs-minimal .v-captiontext:first-child + .#{$primaryStyleName}-caption-close {
-    margin-top: -14px;
+.v-ie9 & .#{$primaryStyleName}-tabs-minimal .#{$primaryStyleName}-tabitem .#{$primaryStyleName}-caption-close { 
+    &, &:hover, &:active {
+        
+        /* IE9 suffers from rounding subpixel values errors when measuring the tabs which makes the close button wrap. */
+        margin-left: 2.5px;
+            
+        /* The close button is a pixel too high in IE9, adjust for that */
+        margin-top: 1px;
+    }        
 }
 
 .#{$primaryStyleName}-tabs-minimal .#{$primaryStyleName}-caption-close:hover,
